--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "[javascript, javascriptreact, typescript, typescriptreact]": {
+    "[javascript]": {
+        "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[typescript]": {
         "editor.defaultFormatter": "biomejs.biome"
     }
 }
